--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-filter==24.2
 djangorestframework==3.15.2
 Faker==26.0.0
 Markdown==3.6
+pillow==10.4.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 six==1.16.0
